[gd_scene load_steps=10 format=4 uid="uid://c1wlypkhf1wmo"]

[ext_resource type="Script" path="res://Scenes/Main/simulate_day.gd" id="1_chqvt"]
[ext_resource type="TileSet" uid="uid://b1cxw6hwiai78" path="res://Assets/Tilesets/tileset.tres" id="2_dja3q"]
[ext_resource type="TileSet" uid="uid://cr7xg8b67bpeu" path="res://Assets/Tilesets/tileset_stand1.tres" id="3_y0bpt"]
[ext_resource type="PackedScene" uid="uid://dgda5lufbed1i" path="res://Scenes/Main/rain.tscn" id="4_03o1y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rymy1"]
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 1)
draw_center = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2icda"]
size = Vector2(7.5, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4o8l"]
size = Vector2(38, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as0q8"]
size = Vector2(10, 86)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upab5"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.964183, 0.778168, 3.85046e-07, 1)
corner_detail = 1
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="Park" type="PanelContainer" node_paths=PackedStringArray("spawn_timer", "spawner")]
y_sort_enabled = true
offset_left = -8.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rymy1")
script = ExtResource("1_chqvt")
spawn_timer = NodePath("Spawner/SpawnFrequency")
spawner = NodePath("Spawner")

[node name="GroundBase" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAABwAFAAQAAAAAAAEABwAFAAQAAAAAAAIABwAFAAQAAAAAAAMABwAFAAQAAAAAAAQABwAFAAQAAAAAAAUABwAFAAQAAAAAAAYABwAFAAQAAAAAAAcABwAFAAQAAAAAAAgABwAFAAQAAAAAAAkABwAFAAQAAAAAAAoABwAFAAQAAAABAAAABwAFAAQAAAABAAEABwAFAAQAAAABAAIABwAFAAQAAAABAAMABwAFAAQAAAABAAQABwAFAAQAAAABAAUABwAFAAQAAAABAAYABwAFAAQAAAABAAcABwAFAAQAAAABAAgABwAFAAQAAAABAAkABwAFAAQAAAABAAoABwAFAAQAAAACAAAABwAFAAQAAAACAAEABwAFAAQAAAACAAIABwAFAAQAAAACAAMABwAFAAQAAAACAAQABwAFAAQAAAACAAUABwAFAAQAAAACAAYABwAFAAQAAAACAAcABwAFAAQAAAACAAgABwAFAAQAAAACAAkABwAFAAQAAAACAAoABwAFAAQAAAADAAAABwAFAAQAAAADAAEABwAFAAQAAAADAAIABwAFAAQAAAADAAMABwAFAAQAAAADAAQABwAFAAQAAAADAAUABwAFAAQAAAADAAYABwAFAAQAAAADAAcABwAFAAQAAAADAAgABwAFAAQAAAADAAkABwAFAAQAAAADAAoABwAFAAQAAAAEAAAABwAFAAQAAAAEAAEABwAFAAQAAAAEAAIABwAFAAQAAAAEAAMABwAFAAQAAAAEAAQABwAFAAQAAAAEAAUABwAFAAQAAAAEAAYABwAFAAQAAAAEAAcABwAFAAQAAAAEAAgABwAFAAQAAAAEAAkABwAFAAQAAAAEAAoABwAFAAQAAAAFAAAABwAFAAQAAAAFAAEABwAFAAQAAAAFAAIABwAFAAQAAAAFAAMABwAFAAQAAAAFAAQABwAFAAQAAAAFAAUABwAFAAQAAAAFAAYABwAFAAQAAAAFAAcABwAFAAQAAAAFAAgABwAFAAQAAAAFAAkABwAFAAQAAAAFAAoABwAFAAQAAAAGAAAABwAFAAQAAAAGAAEABwAFAAQAAAAGAAIABwAFAAQAAAAGAAMABwAFAAQAAAAGAAQABwAFAAQAAAAGAAUABwAFAAQAAAAGAAYABwAFAAQAAAAGAAcABwAFAAQAAAAGAAgABwAFAAQAAAAGAAkABwAFAAQAAAAGAAoABwAFAAQAAAAHAAAABwAFAAQAAAAHAAEABwAFAAQAAAAHAAIABwAFAAQAAAAHAAMABwAFAAQAAAAHAAQABwAFAAQAAAAHAAUABwAFAAQAAAAHAAYABwAFAAQAAAAHAAcABwAFAAQAAAAHAAgABwAFAAQAAAAHAAkABwAFAAQAAAAHAAoABwAFAAQAAAAIAAAABwAFAAQAAAAIAAEABwAFAAQAAAAIAAIABwAFAAQAAAAIAAMABwAFAAQAAAAIAAQABwAFAAQAAAAIAAUABwAFAAQAAAAIAAYABwAFAAQAAAAIAAcABwAFAAQAAAAIAAgABwAFAAQAAAAIAAkABwAFAAQAAAAIAAoABwAFAAQAAAAJAAAABwAFAAQAAAAJAAEABwAFAAQAAAAJAAIABwAFAAQAAAAJAAMABwAFAAQAAAAJAAQABwAFAAQAAAAJAAUABwAFAAQAAAAJAAYABwAFAAQAAAAJAAcABwAFAAQAAAAJAAgABwAFAAQAAAAJAAkABwAFAAQAAAAJAAoABwAFAAQAAAAKAAAABwAFAAQAAAAKAAEABwAFAAQAAAAKAAIABwAFAAQAAAAKAAMABwAFAAQAAAAKAAQABwAFAAQAAAAKAAUABwAFAAQAAAAKAAYABwAFAAQAAAAKAAcABwAFAAQAAAAKAAgABwAFAAQAAAAKAAkABwAFAAQAAAAKAAoABwAFAAQAAAALAAAABwAFAAQAAAALAAEABwAFAAQAAAALAAIABwAFAAQAAAALAAMABwAFAAQAAAALAAQABwAFAAQAAAALAAUABwAFAAQAAAALAAYABwAFAAQAAAALAAcABwAFAAQAAAALAAgABwAFAAQAAAALAAkABwAFAAQAAAALAAoABwAFAAQAAAAMAAAABwAFAAQAAAAMAAEABwAFAAQAAAAMAAIABwAFAAQAAAAMAAMABwAFAAQAAAAMAAQABwAFAAQAAAAMAAUABwAFAAQAAAAMAAYABwAFAAQAAAAMAAcABwAFAAQAAAAMAAgABwAFAAQAAAAMAAkABwAFAAQAAAAMAAoABwAFAAQAAAANAAAABwAFAAQAAAANAAEABwAFAAQAAAANAAIABwAFAAQAAAANAAMABwAFAAQAAAANAAQABwAFAAQAAAANAAUABwAFAAQAAAANAAYABwAFAAQAAAANAAcABwAFAAQAAAANAAgABwAFAAQAAAANAAkABwAFAAQAAAANAAoABwAFAAQAAAAOAAAABwAFAAQAAAAOAAEABwAFAAQAAAAOAAIABwAFAAQAAAAOAAMABwAFAAQAAAAOAAQABwAFAAQAAAAOAAUABwAFAAQAAAAOAAYABwAFAAQAAAAOAAcABwAFAAQAAAAOAAgABwAFAAQAAAAOAAkABwAFAAQAAAAOAAoABwAFAAQAAAAPAAAABwAFAAQAAAAPAAEABwAFAAQAAAAPAAIABwAFAAQAAAAPAAMABwAFAAQAAAAPAAQABwAFAAQAAAAPAAUABwAFAAQAAAAPAAYABwAFAAQAAAAPAAcABwAFAAQAAAAPAAgABwAFAAQAAAAPAAkABwAFAAQAAAAPAAoABwAFAAQAAAAQAAAABwAFAAQAAAAQAAEABwAFAAQAAAAQAAIABwAFAAQAAAAQAAMABwAFAAQAAAAQAAQABwAFAAQAAAAQAAUABwAFAAQAAAAQAAYABwAFAAQAAAAQAAcABwAFAAQAAAAQAAgABwAFAAQAAAAQAAkABwAFAAQAAAAQAAoABwAFAAQAAAAQAAsABwAFAAQAAAAPAAsABwAFAAQAAAAOAAsABwAFAAQAAAANAAsABwAFAAQAAAAMAAsABwAFAAQAAAALAAsABwAFAAQAAAAKAAsABwAFAAQAAAAJAAsABwAFAAQAAAAIAAsABwAFAAQAAAAHAAsABwAFAAQAAAAGAAsABwAFAAQAAAAFAAsABwAFAAQAAAAEAAsABwAFAAQAAAADAAsABwAFAAQAAAACAAsABwAFAAQAAAABAAsABwAFAAQAAAAAAAsABwAFAAQAAAARAAAABwAFAAQAAAASAAAABwAFAAQAAAATAAAABwAFAAQAAAAUAAAABwAFAAQAAAAVAAAABwAFAAQAAAAWAAAABwAFAAQAAAAWAAEABwAFAAQAAAAWAAIABwAFAAQAAAAWAAMABwAFAAQAAAAWAAQABwAFAAQAAAAWAAUABwAFAAQAAAAWAAYABwAFAAQAAAAWAAcABwAFAAQAAAAWAAgABwAFAAQAAAAWAAkABwAFAAQAAAAWAAoABwAFAAQAAAAWAAsABwAFAAQAAAAWAAwABwAFAAQAAAAWAA0ABwAFAAQAAAAWAA4ABwAFAAQAAAAWAA8ABwAFAAQAAAAWABAABwAFAAQAAAAWABEABwAFAAQAAAAVABEABwAFAAQAAAAUABEABwAFAAQAAAATABEABwAFAAQAAAASABEABwAFAAQAAAARABEABwAFAAQAAAAQABEABwAFAAQAAAAPABEABwAFAAQAAAAOABEABwAFAAQAAAANABEABwAFAAQAAAAMABEABwAFAAQAAAALABEABwAFAAQAAAAKABEABwAFAAQAAAAJABEABwAFAAQAAAAIABEABwAFAAQAAAAHABEABwAFAAQAAAAGABEABwAFAAQAAAAFABEABwAFAAQAAAAEABEABwAFAAQAAAADABEABwAFAAQAAAACABEABwAFAAQAAAACABAABwAFAAQAAAABABAABwAFAAQAAAAAABAABwAFAAQAAAAAABEABwAFAAQAAAABABEABwAFAAQAAAAAAAwABwAFAAQAAAAAAA0ABwAFAAQAAAAAAA4ABwAFAAQAAAAAAA8ABwAFAAQAAAANAA4ABwAFAAQAAAANAA0ABwAFAAQAAAANAAwABwAFAAQAAAAMAAwABwAFAAQAAAALAAwABwAFAAQAAAAKAAwABwAFAAQAAAAJAAwABwAFAAQAAAAIAAwABwAFAAQAAAAHAAwABwAFAAQAAAAGAAwABwAFAAQAAAAFAAwABwAFAAQAAAAEAAwABwAFAAQAAAADAAwABwAFAAQAAAACAAwABwAFAAQAAAABAAwABwAFAAQAAAABAA0ABwAFAAQAAAABAA4ABwAFAAQAAAABAA8ABwAFAAQAAAACAA8ABwAFAAQAAAACAA4ABwAFAAQAAAACAA0ABwAFAAQAAAADAA0ABwAFAAQAAAADAA4ABwAFAAQAAAADAA8ABwAFAAQAAAADABAABwAFAAQAAAAEABAABwAFAAQAAAAEAA8ABwAFAAQAAAAEAA4ABwAFAAQAAAAEAA0ABwAFAAQAAAAFAA0ABwAFAAQAAAAFAA4ABwAFAAQAAAAFAA8ABwAFAAQAAAAFABAABwAFAAQAAAAGABAABwAFAAQAAAAGAA8ABwAFAAQAAAAGAA4ABwAFAAQAAAAGAA0ABwAFAAQAAAAHAA0ABwAFAAQAAAAHAA4ABwAFAAQAAAAHAA8ABwAFAAQAAAAHABAABwAFAAQAAAAIABAABwAFAAQAAAAIAA8ABwAFAAQAAAAIAA4ABwAFAAQAAAAIAA0ABwAFAAQAAAAJAA0ABwAFAAQAAAAJAA4ABwAFAAQAAAAJAA8ABwAFAAQAAAAJABAABwAFAAQAAAAKABAABwAFAAQAAAAKAA8ABwAFAAQAAAAKAA4ABwAFAAQAAAAKAA0ABwAFAAQAAAALAA0ABwAFAAQAAAALAA4ABwAFAAQAAAALAA8ABwAFAAQAAAALABAABwAFAAQAAAAMABAABwAFAAQAAAAMAA8ABwAFAAQAAAAMAA4ABwAFAAQAAAAMAA0ABwAFAAQAAAANAA8ABwAFAAQAAAANABAABwAFAAQAAAAOABAABwAFAAQAAAAOAA8ABwAFAAQAAAAOAA4ABwAFAAQAAAAOAA0ABwAFAAQAAAAOAAwABwAFAAQAAAAPAAwABwAFAAQAAAAPAA0ABwAFAAQAAAAPAA4ABwAFAAQAAAAPAA8ABwAFAAQAAAAPABAABwAFAAQAAAAQABAABwAFAAQAAAAQAA8ABwAFAAQAAAAQAA4ABwAFAAQAAAAQAA0ABwAFAAQAAAAQAAwABwAFAAQAAAARAAwABwAFAAQAAAARAAsABwAFAAQAAAARAAoABwAFAAQAAAARAAkABwAFAAQAAAARAAgABwAFAAQAAAARAAcABwAFAAQAAAARAAYABwAFAAQAAAARAAUABwAFAAQAAAARAAQABwAFAAQAAAARAAMABwAFAAQAAAARAAIABwAFAAQAAAARAAEABwAFAAQAAAASAAEABwAFAAQAAAASAAIABwAFAAQAAAASAAMABwAFAAQAAAASAAQABwAFAAQAAAASAAUABwAFAAQAAAASAAYABwAFAAQAAAASAAcABwAFAAQAAAASAAgABwAFAAQAAAASAAkABwAFAAQAAAASAAoABwAFAAQAAAASAAsABwAFAAQAAAASAAwABwAFAAQAAAASAA0ABwAFAAQAAAARAA0ABwAFAAQAAAARAA4ABwAFAAQAAAARAA8ABwAFAAQAAAARABAABwAFAAQAAAASABAABwAFAAQAAAASAA8ABwAFAAQAAAASAA4ABwAFAAQAAAATAA4ABwAFAAQAAAATAA0ABwAFAAQAAAATAAwABwAFAAQAAAATAAsABwAFAAQAAAATAAoABwAFAAQAAAATAAkABwAFAAQAAAATAAgABwAFAAQAAAATAAcABwAFAAQAAAATAAYABwAFAAQAAAATAAUABwAFAAQAAAATAAQABwAFAAQAAAATAAMABwAFAAQAAAATAAIABwAFAAQAAAATAAEABwAFAAQAAAAUAAEABwAFAAQAAAAUAAIABwAFAAQAAAAUAAMABwAFAAQAAAAUAAQABwAFAAQAAAAUAAUABwAFAAQAAAAUAAYABwAFAAQAAAAUAAcABwAFAAQAAAAUAAgABwAFAAQAAAAUAAkABwAFAAQAAAAUAAoABwAFAAQAAAAUAAsABwAFAAQAAAAUAAwABwAFAAQAAAAUAA0ABwAFAAQAAAAUAA4ABwAFAAQAAAAUAA8ABwAFAAQAAAATAA8ABwAFAAQAAAATABAABwAFAAQAAAAUABAABwAFAAQAAAAVABAABwAFAAQAAAAVAA8ABwAFAAQAAAAVAA4ABwAFAAQAAAAVAA0ABwAFAAQAAAAVAAwABwAFAAQAAAAVAAsABwAFAAQAAAAVAAoABwAFAAQAAAAVAAkABwAFAAQAAAAVAAgABwAFAAQAAAAVAAcABwAFAAQAAAAVAAYABwAFAAQAAAAVAAUABwAFAAQAAAAVAAQABwAFAAQAAAAVAAMABwAFAAQAAAAVAAIABwAFAAQAAAAVAAEABwAFAAQAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="GroundProps" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAP3/BwADAAcAAAAAAP7/BwADAAgAAAAAAP//BwADAAkAAAAAAAAABwADAAoAAAAAAAEABwADAAsAAAABAP3/BwAEAAcAAAABAP7/BwAEAAgAAAABAP//BwAEAAkAAAABAAAABwAEAAoAAAABAAEABwAEAAsAAAACAP3/BwAFAAcAAAACAP7/BwAFAAgAAAACAP//BwAFAAkAAAACAAAABwAFAAoAAAACAAEABwAFAAsAAAADAP3/BwAGAAcAAAADAP7/BwAGAAgAAAADAP//BwAGAAkAAAADAAAABwAGAAoAAAADAAEABwAGAAsAAAAEAP3/BwAHAAcAAAAEAP7/BwAHAAgAAAAEAP//BwAHAAkAAAAEAAAABwAHAAoAAAAEAAEABwAHAAsAAAAFAP3/BwAIAAcAAAAFAP7/BwAIAAgAAAAFAP//BwAIAAkAAAAFAAAABwAIAAoAAAAFAAEABwAIAAsAAAAGAP3/BwAJAAcAAAAGAP7/BwAJAAgAAAAGAP//BwAJAAkAAAAGAAAABwAJAAoAAAAGAAEABwAJAAsAAAAHAP3/BwAKAAcAAAAHAP7/BwAKAAgAAAAHAP//BwAKAAkAAAAHAAAABwAKAAoAAAAHAAEABwAKAAsAAAAIAP3/BwADAAcAAAAIAP7/BwADAAgAAAAIAP//BwADAAkAAAAIAAAABwADAAoAAAAIAAEABwADAAsAAAAJAP3/BwAEAAcAAAAJAP7/BwAEAAgAAAAJAP//BwAEAAkAAAAJAAAABwAEAAoAAAAJAAEABwAEAAsAAAAKAP3/BwAFAAcAAAAKAP7/BwAFAAgAAAAKAP//BwAFAAkAAAAKAAAABwAFAAoAAAAKAAEABwAFAAsAAAALAP3/BwAGAAcAAAALAP7/BwAGAAgAAAALAP//BwAGAAkAAAALAAAABwAGAAoAAAALAAEABwAGAAsAAAAMAP3/BwAHAAcAAAAMAP7/BwAHAAgAAAAMAP//BwAHAAkAAAAMAAAABwAHAAoAAAAMAAEABwAHAAsAAAANAP3/BwAIAAcAAAANAP7/BwAIAAgAAAANAP//BwAIAAkAAAANAAAABwAIAAoAAAANAAEABwAIAAsAAAAOAP3/BwAJAAcAAAAOAP7/BwAJAAgAAAAOAP//BwAJAAkAAAAOAAAABwAJAAoAAAAOAAEABwAJAAsAAAAPAP3/BwAKAAcAAAAPAP7/BwAKAAgAAAAPAP//BwAKAAkAAAAPAAAABwAKAAoAAAAPAAEABwAKAAsAAAAQAP3/BwADAAcAAAAQAP7/BwADAAgAAAAQAP//BwADAAkAAAAQAAAABwADAAoAAAAQAAEABwADAAsAAAARAP3/BwAEAAcAAAARAP7/BwAEAAgAAAARAP//BwAEAAkAAAARAAAABwAEAAoAAAARAAEABwAEAAsAAAASAP3/BwAFAAcAAAASAP7/BwAFAAgAAAASAP//BwAFAAkAAAASAAAABwAFAAoAAAASAAEABwAFAAsAAAATAP3/BwAGAAcAAAATAP7/BwAGAAgAAAATAP//BwAGAAkAAAATAAAABwAGAAoAAAATAAEABwAGAAsAAAAUAP3/BwAHAAcAAAAUAP7/BwAHAAgAAAAUAP//BwAHAAkAAAAUAAAABwAHAAoAAAAUAAEABwAHAAsAAAAVAP3/BwAIAAcAAAAVAP7/BwAIAAgAAAAVAP//BwAIAAkAAAAVAAAABwAIAAoAAAAVAAEABwAIAAsAAAAWAP3/BwAJAAcAAAAWAP7/BwAJAAgAAAAWAP//BwAJAAkAAAAWAAAABwAJAAoAAAAWAAEABwAJAAsAAAACAAwABwAIAAMAAAADAA0ABwAIAAMAAAAFAAwABwATAAMAAAAHAA0ABwAIAAMAAAAKAA0ABwATAAMAAAALAA0ABwASAAMAAAANAAwABwAIAAAAAAAPAAwABwAIAAAAAAAPAA0ABwATAAMAAAASAAwABwAIAAAAAAATAA0ABwATAAMAAAAUAAwABwAIAAAAAAALAAgABwAIAAAAAAAMAAsABwAIAAMAAAAJAAsABwASAAMAAAAIAAsABwARAAMAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="GrassBase" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAIABwABAAQAAAAAAAMABwABAAQAAAAAAAQABwABAAQAAAAAAAUABwABAAQAAAAAAAYABwABAAQAAAAAAAcABwABAAQAAAAAAAgABwABAAQAAAAAAAkABwABAAQAAAAAAAoABwABAAQAAAAAAAsABwABAAUAAAAAAA4ABwABAAMAAAAAAA8ABwABAAQAAAAAABAABwABAAQAAAAAABEABwABAAQAAAABAAIABwABAAQAAAABAAMABwABAAQAAAABAAQABwABAAQAAAABAAUABwABAAQAAAABAAYABwABAAQAAAABAAcABwABAAQAAAABAAgABwABAAQAAAABAAkABwABAAQAAAABAAoABwABAAQAAAABAAsABwABAAUAAAABAA4ABwABAAMAAAABAA8ABwABAAQAAAABABAABwABAAQAAAABABEABwABAAQAAAACAAIABwABAAQAAAACAAMABwABAAQAAAACAAQABwABAAQAAAACAAUABwABAAQAAAACAAYABwABAAQAAAACAAcABwABAAQAAAACAAgABwABAAQAAAACAAkABwABAAQAAAACAAoABwABAAQAAAACAAsABwABAAUAAAACAA4ABwABAAMAAAACAA8ABwABAAQAAAACABAABwABAAQAAAACABEABwABAAQAAAADAAIABwABAAQAAAADAAMABwABAAQAAAADAAQABwABAAQAAAADAAUABwABAAQAAAADAAYABwABAAQAAAADAAcABwABAAQAAAADAAgABwABAAQAAAADAAkABwABAAQAAAADAAoABwABAAQAAAADAAsABwABAAUAAAADAA4ABwABAAMAAAADAA8ABwABAAQAAAADABAABwABAAQAAAADABEABwABAAQAAAAEAAIABwABAAQAAAAEAAMABwABAAQAAAAEAAQABwABAAQAAAAEAAUABwABAAQAAAAEAAYABwABAAQAAAAEAAcABwABAAQAAAAEAAgABwABAAQAAAAEAAkABwABAAQAAAAEAAoABwABAAQAAAAEAAsABwABAAUAAAAEAA4ABwABAAMAAAAEAA8ABwABAAQAAAAEABAABwABAAQAAAAEABEABwABAAQAAAAFAAIABwABAAQAAAAFAAMABwABAAQAAAAFAAQABwABAAQAAAAFAAUABwABAAQAAAAFAAYABwABAAQAAAAFAAcABwABAAQAAAAFAAgABwABAAQAAAAFAAkABwABAAQAAAAFAAoABwABAAQAAAAFAAsABwABAAUAAAAFAA4ABwABAAMAAAAFAA8ABwABAAQAAAAFABAABwABAAQAAAAFABEABwABAAQAAAAGAAIABwABAAQAAAAGAAMABwABAAQAAAAGAAQABwABAAQAAAAGAAUABwABAAQAAAAGAAYABwABAAQAAAAGAAcABwABAAQAAAAGAAgABwABAAQAAAAGAAkABwABAAQAAAAGAAoABwABAAQAAAAGAAsABwABAAUAAAAGAA4ABwABAAMAAAAGAA8ABwABAAQAAAAGABAABwABAAQAAAAGABEABwABAAQAAAAHAAIABwABAAQAAAAHAAMABwABAAQAAAAHAAQABwABAAQAAAAHAAUABwABAAQAAAAHAAYABwABAAQAAAAHAAcABwABAAQAAAAHAAgABwABAAQAAAAHAAkABwABAAQAAAAHAAoABwAMAAIAAAAHAAsABwAMAAMAAAAHAA4ABwABAAMAAAAHAA8ABwABAAQAAAAHABAABwABAAQAAAAHABEABwABAAQAAAAIAAIABwABAAQAAAAIAAMABwABAAQAAAAIAAQABwABAAQAAAAIAAUABwABAAQAAAAIAAYABwABAAQAAAAIAAcABwAEAAMAAAAIAAgABwADAAQAAAAIAAkABwADAAQAAAAIAAoABwAMAAMAAAAIAA4ABwABAAMAAAAIAA8ABwABAAQAAAAIABAABwABAAQAAAAIABEABwABAAQAAAAJAAIABwABAAQAAAAJAAMABwABAAQAAAAJAAQABwABAAQAAAAJAAUABwABAAQAAAAJAAYABwABAAQAAAAJAAcABwAFAAMAAAAJAA4ABwABAAMAAAAJAA8ABwABAAQAAAAJABAABwABAAQAAAAJABEABwABAAQAAAAKAAIABwABAAQAAAAKAAMABwABAAQAAAAKAAQABwABAAQAAAAKAAUABwABAAQAAAAKAAYABwABAAQAAAAKAAcABwAFAAMAAAAKAA4ABwABAAMAAAAKAA8ABwABAAQAAAAKABAABwABAAQAAAAKABEABwABAAQAAAALAAIABwABAAQAAAALAAMABwABAAQAAAALAAQABwABAAQAAAALAAUABwABAAQAAAALAAYABwABAAQAAAALAAcABwAFAAMAAAALAA4ABwABAAMAAAALAA8ABwABAAQAAAALABAABwABAAQAAAALABEABwABAAQAAAAMAAIABwABAAQAAAAMAAMABwABAAQAAAAMAAQABwABAAQAAAAMAAUABwABAAQAAAAMAAYABwABAAQAAAAMAAcABwAHAAMAAAAMAA4ABwABAAMAAAAMAA8ABwABAAQAAAAMABAABwABAAQAAAAMABEABwABAAQAAAANAAIABwABAAQAAAANAAMABwABAAQAAAANAAQABwABAAQAAAANAAUABwABAAQAAAANAAYABwABAAQAAAANAAcABwABAAQAAAANAAgABwABAAQAAAANAAkABwABAAQAAAANAAoABwALAAIAAAANAA4ABwABAAMAAAANAA8ABwABAAQAAAANABAABwABAAQAAAANABEABwABAAQAAAAOAAIABwABAAQAAAAOAAMABwABAAQAAAAOAAQABwABAAQAAAAOAAUABwABAAQAAAAOAAYABwABAAQAAAAOAAcABwABAAQAAAAOAAgABwABAAQAAAAOAAkABwABAAQAAAAOAAoABwABAAQAAAAOAA4ABwABAAMAAAAOAA8ABwABAAQAAAAOABAABwABAAQAAAAOABEABwABAAQAAAAPAAIABwABAAQAAAAPAAMABwABAAQAAAAPAAQABwABAAQAAAAPAAUABwABAAQAAAAPAAYABwABAAQAAAAPAAcABwABAAQAAAAPAAgABwABAAQAAAAPAAkABwABAAQAAAAPAAoABwABAAQAAAAPAAsABwABAAUAAAAPAA4ABwABAAMAAAAPAA8ABwABAAQAAAAPABAABwABAAQAAAAPABEABwABAAQAAAAQAAIABwABAAQAAAAQAAMABwABAAQAAAAQAAQABwABAAQAAAAQAAUABwABAAQAAAAQAAYABwABAAQAAAAQAAcABwABAAQAAAAQAAgABwABAAQAAAAQAAkABwABAAQAAAAQAAoABwABAAQAAAAQAAsABwABAAUAAAAQAA4ABwABAAMAAAAQAA8ABwABAAQAAAAQABAABwABAAQAAAAQABEABwABAAQAAAARAAIABwABAAQAAAARAAMABwABAAQAAAARAAQABwABAAQAAAARAAUABwABAAQAAAARAAYABwABAAQAAAARAAcABwABAAQAAAARAAgABwABAAQAAAARAAkABwABAAQAAAARAAoABwABAAQAAAARAAsABwABAAUAAAARAA4ABwABAAMAAAARAA8ABwABAAQAAAARABAABwABAAQAAAARABEABwABAAQAAAASAAIABwABAAQAAAASAAMABwABAAQAAAASAAQABwABAAQAAAASAAUABwABAAQAAAASAAYABwABAAQAAAASAAcABwABAAQAAAASAAgABwABAAQAAAASAAkABwABAAQAAAASAAoABwABAAQAAAASAAsABwABAAUAAAASAA4ABwABAAMAAAASAA8ABwABAAQAAAASABAABwABAAQAAAASABEABwABAAQAAAATAAIABwABAAQAAAATAAMABwABAAQAAAATAAQABwABAAQAAAATAAUABwABAAQAAAATAAYABwABAAQAAAATAAcABwABAAQAAAATAAgABwABAAQAAAATAAkABwABAAQAAAATAAoABwABAAQAAAATAAsABwABAAUAAAATAA4ABwABAAMAAAATAA8ABwABAAQAAAATABAABwABAAQAAAATABEABwABAAQAAAAUAAIABwABAAQAAAAUAAMABwABAAQAAAAUAAQABwABAAQAAAAUAAUABwABAAQAAAAUAAYABwABAAQAAAAUAAcABwABAAQAAAAUAAgABwABAAQAAAAUAAkABwABAAQAAAAUAAoABwABAAQAAAAUAAsABwABAAUAAAAUAA4ABwABAAMAAAAUAA8ABwABAAQAAAAUABAABwABAAQAAAAUABEABwABAAQAAAAVAAIABwABAAQAAAAVAAMABwABAAQAAAAVAAQABwABAAQAAAAVAAUABwABAAQAAAAVAAYABwABAAQAAAAVAAcABwABAAQAAAAVAAgABwABAAQAAAAVAAkABwABAAQAAAAVAAoABwABAAQAAAAVAAsABwABAAUAAAAVAA4ABwABAAMAAAAVAA8ABwABAAQAAAAVABAABwABAAQAAAAVABEABwABAAQAAAAWAAIABwABAAQAAAAWAAMABwABAAQAAAAWAAQABwABAAQAAAAWAAUABwABAAQAAAAWAAYABwABAAQAAAAWAAcABwABAAQAAAAWAAgABwABAAQAAAAWAAkABwABAAQAAAAWAAoABwABAAQAAAAWAAsABwABAAUAAAAWAA4ABwABAAMAAAAWAA8ABwABAAQAAAAWABAABwABAAQAAAAWABEABwABAAQAAAAOAAsABwABAAUAAAAMAAoABwALAAMAAAANAAsABwALAAMAAAAMAAkABwAAAAQAAAAMAAgABwAAAAQAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="GrassProps" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAwABwAQAAMAAAAKAA0ABwAQAAMAAAALAAoABwAQAAMAAAAJAAkABwAQAAMAAAARAA0ABwAQAAMAAAAVAA0ABwAQAAMAAAAWAAwABwAQAAMAAAAEAA0ABwAQAAMAAAAFAAwABwAQAAMAAAAJAAwABwAQAAMAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="ObjectsEnvironment" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAEAP3/AAAsAEIAAAAEAP7/AAAsAEMAAAAFAP3/AAAtAEIAAAAFAP7/AAAtAEMAAAAGAP3/AAAuAEIAAAAGAP7/AAAuAEMAAAAHAP3/AAAvAEIAAAAHAP7/AAAvAEMAAAAIAP3/AAAwAEIAAAAIAP7/AAAwAEMAAAAJAP3/AAAxAEIAAAAJAP7/AAAxAEMAAAAKAP3/AAAyAEIAAAAKAP7/AAAyAEMAAAALAP3/AAAzAEIAAAALAP7/AAAzAEMAAAAMAP3/AAAsAEIAAAAMAP7/AAAsAEMAAAANAP3/AAAtAEIAAAANAP7/AAAtAEMAAAAOAP3/AAAuAEIAAAAOAP7/AAAuAEMAAAAPAP3/AAAvAEIAAAAPAP7/AAAvAEMAAAAQAP3/AAAwAEIAAAAQAP7/AAAwAEMAAAAAAP3/AAAwAEIAAAAAAP7/AAAwAEMAAAABAP3/AAAxAEIAAAABAP7/AAAxAEMAAAACAP3/AAAyAEIAAAACAP7/AAAyAEMAAAADAP3/AAAzAEIAAAADAP7/AAAzAEMAAAAIAAIABwANABMAAAANAAEABwANABQAAAAVAAEABwAPABMAAAAFAAEABwAPABMAAAAAAAMABwAKAAYAAAABAAIABwAIAAYAAAAOAAIABwAIAAYAAAALAAIABwAJAAYAAAAJAAMABwAJAAYAAAALAAMABwAKAAYAAAANAAMABwAJAAYAAAAWAAIABwAKAAYAAAARAAIABwAJAAYAAAABAAoABwAKAAYAAAAHAAoABwAIAAYAAAASAAoABwAIAAYAAAAAABAABwAJAAYAAAABAA8ABwAJAAYAAAAWABAABwAKAAYAAAAVAA8ABwAJAAYAAAARAA8ABwAJAAYAAAALAA4ABwAIAAYAAAAUAAIABwAXAAYAAAADAAIABwAYAAYAAAAFAAIABwAUAA4AAAAEAA8ABwAUAA4AAAAVAAMABwAVAA4AAAA=")
tile_set = ExtResource("2_dja3q")

[node name="ObjectsStillBack" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAMABwAPABcAAAACAAYABwANABUAAAABAAkABwAVAAgAAAADAAkABwAXAAgAAAAUAAUABwARABQAAAARAAUABwASABQAAAAOAAUABwAQABQAAAARAAMABwAUABMAAAAEAA4ABwAMABUAAAAJAA4ABwAPABMAAAAWAA4ABwANABMAAAAAAA8ABwANABQAAAATAAoABwAMABUAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="ObjectsStillFront" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAFAAoABwANAAQAAAARAAkABwAWAA4AAAATABAABwAWAA4AAAAPABAABwAUAA8AAAACABAABwAQAAQAAAAOAAoABwANAAQAAAAVABEABwANAAQAAAAFAA4ABwAUAAYAAAAUAAoABwAUAAYAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="ObjectsDay" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAHABAABwAUAAwAAAALABAABwAXAAoAAAATABAABwAWABAAAAAPABAABwAUABEAAAARAAkABwAWABAAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="CoffeeCart" type="TileMapLayer" parent="."]
use_parent_material = true
tile_set = ExtResource("2_dja3q")

[node name="Stand0" type="TileMapLayer" parent="CoffeeCart"]
y_sort_enabled = true
tile_set = ExtResource("2_dja3q")

[node name="Stand" type="TileMapLayer" parent="CoffeeCart/Stand0"]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAgACAAAAAAAAAAKAAYABQAAAAAAAAALAAcACAAEAAIAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="Equipment" type="TileMapLayer" parent="CoffeeCart/Stand0"]
use_parent_material = true

[node name="Level1" type="TileMapLayer" parent="CoffeeCart/Stand0/Equipment"]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAAcACAADAAIAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="Level2" type="TileMapLayer" parent="CoffeeCart/Stand0/Equipment"]
visible = false
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAAcACAAEAAAAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="SpecialsBoard" type="TileMapLayer" parent="CoffeeCart/Stand0"]
visible = false
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAIAAcACAADAAAAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="Umbrella" type="TileMapLayer" parent="CoffeeCart/Stand0"]
visible = false
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAYACAAAAAMAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="SignBoard" type="TileMapLayer" parent="CoffeeCart/Stand0"]
visible = false
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAgACAAAAAYAAAA=")
tile_set = ExtResource("2_dja3q")

[node name="Stand1" type="TileMapLayer" parent="CoffeeCart"]
visible = false
y_sort_enabled = true
tile_set = ExtResource("3_y0bpt")

[node name="Stand" type="TileMapLayer" parent="CoffeeCart/Stand1"]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAYABQAAAAAAAAAKAAgACAAJAAAAAAALAAcACAAEAAIAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="Equipment" type="TileMapLayer" parent="CoffeeCart/Stand1"]
use_parent_material = true
tile_set = ExtResource("3_y0bpt")

[node name="Level1" type="TileMapLayer" parent="CoffeeCart/Stand1/Equipment"]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAAcACAADAAIAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="Level2" type="TileMapLayer" parent="CoffeeCart/Stand1/Equipment"]
visible = false
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAJAAcACAAEAAAAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="SpecialsBoard" type="TileMapLayer" parent="CoffeeCart/Stand1"]
visible = false
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAIAAcACAADAAAAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="Umbrella" type="TileMapLayer" parent="CoffeeCart/Stand1"]
visible = false
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAUACAAAAAQAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="SignBoard" type="TileMapLayer" parent="CoffeeCart/Stand1"]
visible = false
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAKAAgACAAAAAUAAAA=")
tile_set = ExtResource("3_y0bpt")

[node name="Rain" parent="." instance=ExtResource("4_03o1y")]
visible = false
z_index = 2
z_as_relative = false

[node name="Spawner" type="Node2D" parent="."]
y_sort_enabled = true

[node name="SpawnFrequency" type="Timer" parent="Spawner"]

[node name="Spawn1" type="Marker2D" parent="Spawner"]
position = Vector2(8, 208)

[node name="Spawn2" type="Marker2D" parent="Spawner"]
position = Vector2(364, 208)

[node name="Center" type="Marker2D" parent="Spawner"]
position = Vector2(168, 208)

[node name="Destroy1" type="Area2D" parent="Spawner"]
y_sort_enabled = true
position = Vector2(-8, 208)

[node name="CollisionShap2D" type="CollisionShape2D" parent="Spawner/Destroy1"]
shape = SubResource("RectangleShape2D_2icda")

[node name="Destroy2" type="Area2D" parent="Spawner"]
y_sort_enabled = true
position = Vector2(376, 205)

[node name="CollisionShap2D" type="CollisionShape2D" parent="Spawner/Destroy2"]
shape = SubResource("RectangleShape2D_2icda")

[node name="ShopArea" type="Area2D" parent="Spawner"]
position = Vector2(170, 139)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner/ShopArea"]
shape = SubResource("RectangleShape2D_j4o8l")

[node name="CenterArea" type="Area2D" parent="Spawner"]
position = Vector2(169, 181)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner/CenterArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_as0q8")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(340, 260)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_upab5")

[connection signal="timeout" from="Spawner/SpawnFrequency" to="." method="_on_spawn_frequency_timeout"]
[connection signal="body_entered" from="Spawner/Destroy1" to="." method="_on_destroy_1_body_entered"]
[connection signal="body_entered" from="Spawner/Destroy2" to="." method="_on_destroy_2_body_entered"]
[connection signal="body_entered" from="Spawner/ShopArea" to="." method="_on_shop_area_body_entered"]
[connection signal="body_entered" from="Spawner/CenterArea" to="." method="_on_center_area_body_entered"]
